--- a/index.html
+++ b/index.html
@@ -112,8 +112,8 @@
 
 
     .wrapper {
-      margin: 50px auto;
-      height: 80vh;
+      margin: 3vh auto;
+      padding-top: 2vh;
       max-width: 65vw;
       border: 0.2vw solid rgb(20, 34, 43);
       background-color: rgb(37, 40, 42);
@@ -128,8 +128,7 @@
 
     .slider {
       grid-area: Slider;
-      width: 800px;
-      height: 60vh;
+      width: 55vw;
       display: flex;
       overflow: hidden;
       margin: 0 auto;
@@ -137,25 +136,28 @@
       border: 0.1em solid gray;
     }
 
-    .label {
+    .caption {
       grid-area: Label;
-      width: 50vw;
+      padding-left: 2vw;
+      width: 25vw;
+      height: 3em;
       color: aliceblue;
+      font-size: 1em;
+      overflow: hidden;
     }
 
     .control {
       padding-top: 1em;
       grid-area: Control;
       display: flex;
-      position: absolute;
+      /*position: absolute;*/
       justify-content: flex-end;
     }
 
     label {
       cursor: pointer;
-      /*margin: 5px;*/
-      opacity: .5;
-      transition: all .5 ease;
+      opacity: .6;
+      transition: all 5 ease;
     }
 
 
@@ -164,101 +166,234 @@
       justify-content: center;
       text-align: center;
       vertical-align: middle;
-      width: 35px;
-      height: 35px;
+      width: 3vw;
+      height: 5vh;
       cursor: pointer;
     }
 
-    /*
+    
     .myradio {
-      height: 10px;
-      width: 10px;
-      border-radius: 15px;
+      height: 3vw;
+      width: 3vw;
+      border-radius: 1rem;
       border: .2rem solid #0b76ef;
       background-color: #0b76ef;
       color: aliceblue;
-    }
-
-    .myradio:checked .forlabel {
-      background-color: red;
-    }
-
-    .forlabel:checked {
-      background-color: red;
     }
 
     .forlabel:hover>label {
       background-color: #FFFFFF;
       color: #FFFFFF;
       border-color: #FFFFFF;
-      opacity: .8;
+      opacity: 1;
     }
-
-    input[name="slideritem"] {}
 
     .item {
-      width: 800px;
+      width: 55vw;
       transition: all 1s ease-out;
     }
-*/
-    #r1:checked~.slider>.slider1 {
+
+    #r1:checked~.slider .slider1{
       margin-left: 0px;
     }
 
-    #r2:checked~.slider1 {
-      margin-left: -800px;
+    #r2:checked~.slider .slider1{
+      margin-left: -55vw;
     }
 
-    #r3:checked~.slider1 {
-      margin-left: -1600px;
+    #r3:checked~.slider .slider1 {
+      margin-left: -110vw;
     }
 
-    #r4:checked~.slider1 {
-      margin-left: -2400px
+    #r4:checked~.slider .slider1 {
+      margin-left: -165vw;
     }
 
-    #r5:checked~.slider1 {
-      margin-left: -3200px;
+    #r5:checked~.slider .slider1 {
+      margin-left: -220vw;
     }
+
 
     .item img {
-      width: 880px;
-      height: 300px;
+      width: 55vw;
+      margin-top: 2vh;
     }
+    input{
+      visibility: hidden;
+    }
+    #r1:checked~.control #label1{
+      border-color: white; 
+      background-color: rgb(37, 40, 42);
+    } 
+    #r2:checked~.control #label2{
+      border-color: white; 
+      background-color: rgb(37, 40, 42);
+    }
+    #r3:checked~.control #label3{
+      border-color: white;
+      background-color: rgb(37, 40, 42);
+    }
+    #r4:checked~.control #label4{
+      border-color: white;
+      background-color: rgb(37, 40, 42);
+    }
+    #r5:checked~.control #label5{
+      border-color: white;
+      background-color: rgb(37, 40, 42);
+    }
+
+    #r1:checked:hover{
+      border-color: black;
+      background-color: black;
+    }
+    img{
+      transition: all 1s cubic-bezier(0.895, 0.03, 0.685, 0.22);
+      width: 100%;
+    }
+    .label{
+      opacity: 0;
+    }
+
+    #r1:checked~.caption #caption1{
+      transform: translateY(0);
+      opacity: 1;
+    }
+
+    #r2:checked~.caption #caption2{
+      transform: translateY(-2em);
+      opacity: 1;
+      animation: ease-in-out 2s;
+    }
+    #r3:checked~.caption #caption3{
+      transform: translateY(-4em);
+      opacity: 1;
+      animation: ease-in-out 2s;
+    }
+    #r4:checked~.caption #caption4{
+      transform: translateY(-6em);
+      opacity: 1;
+      animation: ease-in-out 2s;
+    }
+    #r5:checked~.caption #caption5{
+      transform: translateY(-8em);
+      opacity: 1;
+      animation: ease-in-out 2s;
+    }
+@keyframes captionscale {
+  from{
+    color: #0b76ef;
+    transform: scale(2);
+  }
+to{
+    color: white;
+    transform: scale(1);
+}
+  
+}
+/*
+    .adaptivny-slayder {
+  position: relative;
+  max-width: 680px;
+  margin: 50px auto;
+  box-shadow: 0 10px 20px -5px rgba(0, 0, 0, 0.75);
+}
+
+.adaptivny-slayder input[name="kadoves"] {
+  display: none;
+}
+
+.kadoves {
+  position: absolute;
+  left: 0;
+  bottom: -40px;
+  text-align: center;
+  width: 100%;
+}
+
+.kadoves label {
+  display: inline-block;
+  width: 8px;
+  height: 8px;
+  cursor: pointer;
+  margin: 0 3px;
+  box-shadow: 0 0 2px 0 rgba(0, 0, 0, .8);
+  border-radius: 50%;
+  border: 5px solid #2f363c;
+  background-color: #738290;
+}
+
+#slaid1:checked~.kadoves label[for="slaid1"] {
+  background-color: white;
+}
+
+#slaid2:checked~.kadoves label[for="slaid2"] {
+  background-color: white;
+}
+
+#slaid3:checked~.kadoves label[for="slaid3"] {
+  background-color: white;
+}
+
+.adaptivny-slayder-lasekun {
+  overflow: hidden;
+   
+}
+
+.abusteku-deagulus {
+  display: flex;
+  width: 100%;
+  transition: all 0.5s;
+}
+
+.abusteku-deagulus img {
+  width: 100%;
+  flex-shrink:0;
+}
+
+#slaid1:checked~adaptivny-slayder-lasekun .abusteku-deagulus {
+  transform: translate(0);
+}
+
+#slaid2:checked~.adaptivny-slayder-lasekun .abusteku-deagulus {
+  transform: translateX(-100%);
+}
+
+#slaid3:checked~.adaptivny-slayder-lasekun .abusteku-deagulus {
+  transform: translateX(-200%);
+}
+*/
+
   </style>
 </head>
 
 <body>
 
   <div class="wrapper">
-
+    <input type="radio" name="slideritem" id="r1" class="r1" checked>
+    <input type="radio" name="slideritem" id="r2" class="r1">
+    <input type="radio" name="slideritem" id="r3" class="r1">
+    <input type="radio" name="slideritem" id="r4" class="r1">
+    <input type="radio" name="slideritem" id="r5" class="r1">
     <div class="slider">
-      <input type="radio" name="slideritem" id="r1" class="r1">
-      <input type="radio" name="slideritem" id="r2" class="r1">
-      <input type="radio" name="slideritem" id="r3" class="r1">
-      <input type="radio" name="slideritem" id="r4" class="r1">
-      <input type="radio" name="slideritem" id="r5" class="r1">
-
       <div class="item slider1"><img src="img/1.jpeg" alt="1"></div>
       <div class="item"><img src="img/2.jpeg" alt="2"></div>
       <div class="item"><img src="img/1.jpeg" alt="3"></div>
       <div class="item"><img src="img/2.jpeg" alt="4"></div>
       <div class="item"><img src="img/1.jpeg" alt="5"></div>
-
-    </div>
-    <div class="label">
-      <span>Подпись 1</span>
-      <span>Подпись 2</span>
-      <span>Подпись 3</span>
-      <span>Подпись 4</span>
-      <span>Подпись 5</span>
+      </div>
+      <div class="caption">
+      <p class="label" id="caption1">Подпись мему 1</p>
+      <p class="label" id="caption2">Подпись мему 2</p>
+      <p class="label" id="caption3">Подпись мему 3</p>
+      <p class="label" id="caption4">Подпись мему 4</p>
+      <p class="label" id="caption5">Подпись мему 5</p>
     </div>
     <div class="control">
       <div class="forlabel"><label for="r1" id="label1" class="myradio">&nbsp;&nbsp;&nbsp;&nbsp;</label></div>
       <div class="forlabel"><label for="r2" id="label2" class="myradio">&nbsp;&nbsp;&nbsp;&nbsp;</label></div>
-      <div class="forlabel"><label for="r5" id="label5" class="myradio">&nbsp;&nbsp;&nbsp;&nbsp;</label></div>
       <div class="forlabel"><label for="r3" id="label3" class="myradio">&nbsp;&nbsp;&nbsp;&nbsp;</label></div>
       <div class="forlabel"><label for="r4" id="label4" class="myradio">&nbsp;&nbsp;&nbsp;&nbsp;</label></div>
+      <div class="forlabel"><label for="r5" id="label5" class="myradio">&nbsp;&nbsp;&nbsp;&nbsp;</label></div>
     </div>
   </div>
 </body>
